@@ -2,21 +2,30 @@ package com.febrie.demo_bk.article;
 
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.febrie.demo_bk.article.internal.ArticleCacheStore;
+import com.febrie.demo_bk.article.internal.ArticleCacheStore.CacheValue;
 import com.febrie.demo_bk.article.internal.ArticleMapper;
+import com.febrie.demo_bk.article.internal.ArticlePageIndex;
 import com.febrie.demo_bk.article.internal.ArticleViewService;
 import com.febrie.demo_bk.article.internal.ArticleViewStore;
 import com.febrie.demo_bk.article.internal.BlogArticle;
+import com.febrie.demo_bk.shared.infrastructure.RedisDistributedLockService;
+import com.febrie.demo_bk.shared.infrastructure.RedisDistributedLockService.LockHandle;
 import com.febrie.demo_bk.shared.web.PageResult;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.time.LocalDateTime;
-import java.util.Collections;
+import java.time.Duration;
 import java.util.List;
+import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
@@ -27,6 +36,7 @@ class ArticleQueryServiceTest {
     private ArticleCacheStore cacheStore;
     private ArticleViewStore viewStore;
     private ArticleViewService viewService;
+    private RedisDistributedLockService lockService;
     private ArticleQueryService queryService;
 
     @BeforeEach
@@ -35,11 +45,13 @@ class ArticleQueryServiceTest {
         cacheStore = mock(ArticleCacheStore.class);
         viewStore = mock(ArticleViewStore.class);
         viewService = mock(ArticleViewService.class);
+        lockService = mock(RedisDistributedLockService.class);
         queryService = new ArticleQueryService(
                 articleMapper,
                 cacheStore,
                 viewStore,
-                viewService
+                viewService,
+                lockService
         );
     }
 
@@ -49,7 +61,7 @@ class ArticleQueryServiceTest {
         article.setId(3);
         article.setArticleTitle("缓存降级");
         article.setViewCount(20L);
-        when(cacheStore.getArticleDetail(3))
+        when(cacheStore.getArticleDetailState(3))
                 .thenThrow(new IllegalStateException("redis unavailable"));
         when(articleMapper.selectById(3)).thenReturn(article);
         when(viewService.recordView(3L, 20L)).thenReturn(null);
@@ -67,34 +79,24 @@ class ArticleQueryServiceTest {
         cached.setId(4);
         cached.setArticleTitle("缓存命中");
         cached.setViewCount(30L);
-        when(cacheStore.getArticleDetail(4)).thenReturn(cached);
+        when(cacheStore.getArticleDetailState(4)).thenReturn(CacheValue.hit(cached));
         when(viewService.recordView(4L, 30L)).thenReturn(31L);
 
         ArticleDTO result = queryService.findById(4);
 
         assertThat(result.getArticleTitle()).isEqualTo("缓存命中");
         assertThat(result.getViewCount()).isEqualTo(31L);
-        verifyNoInteractions(articleMapper);
+        verifyNoInteractions(articleMapper, lockService);
     }
 
     @Test
-    void latestListCacheMissShouldQueryMysqlAndCachePageIndex() {
+    void latestListCacheHitShouldUseCachedIndexAndDto() {
+        ArticlePageIndex pageIndex = new ArticlePageIndex(List.of(6), 1L, 1, 10);
+        ArticleListDTO cached = articleListDto(6, "最新文章", 8L);
         when(cacheStore.getLatestVersion()).thenReturn(2L);
-        when(cacheStore.latestPageKey(2L, 1, 10)).thenReturn("latest-key");
-        when(cacheStore.getLatestPageIndex("latest-key")).thenReturn(null);
-
-        Page<Integer> mysqlPage = new Page<>(1, 10);
-        mysqlPage.setRecords(List.of(6));
-        mysqlPage.setTotal(1L);
-        when(articleMapper.selectArticleIdPage(any(), any())).thenReturn(mysqlPage);
-        when(cacheStore.getArticleListDtos(List.of(6)))
-                .thenReturn(Collections.emptyMap());
-
-        ArticleListDTO article = new ArticleListDTO();
-        article.setId(6);
-        article.setArticleTitle("最新文章");
-        article.setViewCount(8L);
-        when(articleMapper.selectArticleListByIds(List.of(6))).thenReturn(List.of(article));
+        when(cacheStore.getLatestPageIndex(2L, 1, 10)).thenReturn(pageIndex);
+        when(cacheStore.getArticleListDtoStates(List.of(6)))
+                .thenReturn(Map.of(6, CacheValue.hit(cached)));
         when(viewStore.getViewScores(List.of(6))).thenReturn(List.of(9L));
 
         PageResult<ArticleListDTO> result = queryService.findPage(1, 10, null);
@@ -104,33 +106,59 @@ class ArticleQueryServiceTest {
                     assertThat(dto.getArticleTitle()).isEqualTo("最新文章");
                     assertThat(dto.getViewCount()).isEqualTo(9L);
                 });
-        verify(cacheStore).cacheLatestPageIndex(
-                org.mockito.ArgumentMatchers.eq("latest-key"),
-                any()
+        verify(articleMapper, never()).selectArticleIdPage(any(), any());
+    }
+
+    @Test
+    void indexPublishShouldSwitchToNewVersionWhenLuaDetectsChange() {
+        LockHandle indexLock = new LockHandle("index-lock", "token");
+        ArticlePageIndex versionThree = new ArticlePageIndex(List.of(3), 1L, 1, 10);
+        ArticleListDTO cached = articleListDto(3, "新版本文章", 5L);
+        when(cacheStore.getLatestVersion()).thenReturn(2L, 2L, 3L);
+        when(cacheStore.getLatestPageIndex(2L, 1, 10)).thenReturn(null);
+        when(cacheStore.latestPageLockKey(2L, 1, 10)).thenReturn("index-lock");
+        when(lockService.tryLock(
+                eq("index-lock"),
+                any(Duration.class),
+                any(Duration.class)
+        )).thenReturn(indexLock);
+        when(lockService.unlock(indexLock)).thenReturn(true);
+        Page<Integer> oldMysqlPage = new Page<>(1, 10);
+        oldMysqlPage.setRecords(List.of(2));
+        oldMysqlPage.setTotal(1L);
+        when(articleMapper.selectArticleIdPage(any(), any())).thenReturn(oldMysqlPage);
+        when(cacheStore.publishLatestPageIndex(
+                eq(2L),
+                eq(1),
+                eq(10),
+                any(ArticlePageIndex.class),
+                eq(indexLock)
+        )).thenReturn(3L);
+        when(cacheStore.getLatestPageIndex(3L, 1, 10)).thenReturn(versionThree);
+        when(cacheStore.getArticleListDtoStates(List.of(3)))
+                .thenReturn(Map.of(3, CacheValue.hit(cached)));
+        when(viewStore.getViewScores(List.of(3))).thenReturn(List.of(5L));
+
+        PageResult<ArticleListDTO> result = queryService.findPage(1, 10, null);
+
+        assertThat(result.getContent()).singleElement()
+                .extracting(ArticleListDTO::getArticleTitle)
+                .isEqualTo("新版本文章");
+        verify(cacheStore).publishLatestPageIndex(
+                eq(2L),
+                eq(1),
+                eq(10),
+                any(ArticlePageIndex.class),
+                eq(indexLock)
         );
     }
 
     @Test
-    void rankingShouldFallbackToMysqlSnapshotWhenRedisFails() {
+    void rankingShouldFallbackToDirectMysqlDtoPageWhenRedisFails() {
         when(viewStore.hasRankIndex())
                 .thenThrow(new IllegalStateException("redis unavailable"));
-
-        Page<Integer> mysqlPage = new Page<>(1, 10);
-        mysqlPage.setRecords(List.of(5));
-        mysqlPage.setTotal(1L);
-        when(articleMapper.selectArticleIdPage(any(), any()))
-                .thenReturn(mysqlPage);
-        when(cacheStore.getArticleListDtos(List.of(5)))
-                .thenReturn(Collections.emptyMap());
-
-        ArticleListDTO article = new ArticleListDTO();
-        article.setId(5);
-        article.setArticleTitle("MySQL 快照");
-        article.setArticleDate(LocalDateTime.of(2026, 9, 12, 10, 0));
-        article.setViewCount(66L);
-        when(articleMapper.selectArticleListByIds(List.of(5))).thenReturn(List.of(article));
-        when(viewStore.getViewScores(List.of(5)))
-                .thenThrow(new IllegalStateException("redis unavailable"));
+        Page<ArticleListDTO> mysqlPage = dtoPage(articleListDto(5, "MySQL快照", 66L));
+        when(articleMapper.selectArticleListPage(any(), any())).thenReturn(mysqlPage);
 
         PageResult<ArticleListDTO> result =
                 queryService.findPage(1, 10, "viewCountDesc");
@@ -138,8 +166,106 @@ class ArticleQueryServiceTest {
         assertThat(result.getTotalElements()).isEqualTo(1L);
         assertThat(result.getContent()).singleElement()
                 .satisfies(dto -> {
-                    assertThat(dto.getArticleTitle()).isEqualTo("MySQL 快照");
+                    assertThat(dto.getArticleTitle()).isEqualTo("MySQL快照");
                     assertThat(dto.getViewCount()).isEqualTo(66L);
                 });
+    }
+
+    @Test
+    void rankingShouldRemoveSecondRoundMissingIdsWithoutThirdRead() {
+        ArticleViewStore.RankPage firstPage = new ArticleViewStore.RankPage(
+                List.of(1),
+                Map.of(1, 10L),
+                2L
+        );
+        ArticleViewStore.RankPage secondPage = new ArticleViewStore.RankPage(
+                List.of(2),
+                Map.of(2, 9L),
+                1L
+        );
+        when(viewStore.hasRankIndex()).thenReturn(true);
+        when(viewStore.getRankPage(1, 10)).thenReturn(firstPage, secondPage);
+        when(cacheStore.getArticleListDtoStates(List.of(1)))
+                .thenReturn(Map.of(1, CacheValue.negative()));
+        when(cacheStore.getArticleListDtoStates(List.of(2)))
+                .thenReturn(Map.of(2, CacheValue.negative()));
+        when(viewStore.getRankSize()).thenReturn(0L);
+
+        PageResult<ArticleListDTO> result =
+                queryService.findPage(1, 10, "viewCountDesc");
+
+        assertThat(result.getContent()).isEmpty();
+        assertThat(result.getTotalElements()).isZero();
+        verify(viewStore, times(2)).getRankPage(1, 10);
+        verify(viewStore).removeRankMembers(java.util.Set.of(1));
+        verify(viewStore).removeRankMembers(java.util.Set.of(2));
+    }
+
+    @Test
+    void secondInvalidLatestVersionShouldBeDiscardedAndFallbackToMysql() {
+        ArticlePageIndex versionSeven = new ArticlePageIndex(List.of(7), 1L, 1, 10);
+        ArticlePageIndex versionEight = new ArticlePageIndex(List.of(8), 1L, 1, 10);
+        when(cacheStore.getLatestVersion()).thenReturn(7L, 7L, 8L);
+        when(cacheStore.getLatestPageIndex(7L, 1, 10)).thenReturn(versionSeven);
+        when(cacheStore.getLatestPageIndex(8L, 1, 10)).thenReturn(versionEight);
+        when(cacheStore.getArticleListDtoStates(List.of(7)))
+                .thenReturn(Map.of(7, CacheValue.negative()));
+        when(cacheStore.getArticleListDtoStates(List.of(8)))
+                .thenReturn(Map.of(8, CacheValue.negative()));
+        when(cacheStore.advanceLatestVersion(7L)).thenReturn(8L);
+        when(cacheStore.advanceLatestVersion(8L)).thenReturn(9L);
+        when(articleMapper.selectArticleListPage(any(), any()))
+                .thenReturn(dtoPage(articleListDto(9, "数据库兜底", 3L)));
+        when(viewStore.getViewScores(List.of(9))).thenReturn(List.of(3L));
+
+        PageResult<ArticleListDTO> result = queryService.findPage(1, 10, null);
+
+        assertThat(result.getContent()).singleElement()
+                .extracting(ArticleListDTO::getArticleTitle)
+                .isEqualTo("数据库兜底");
+        verify(cacheStore).advanceLatestVersion(7L);
+        verify(cacheStore).advanceLatestVersion(8L);
+        verify(cacheStore, never()).getLatestPageIndex(eq(9L), anyInt(), anyInt());
+    }
+
+    @Test
+    void unresolvedLatestIdShouldFallbackWithoutAdvancingVersion() {
+        ArticlePageIndex pageIndex = new ArticlePageIndex(List.of(4), 1L, 1, 10);
+        LockHandle dtoLock = new LockHandle("list-lock", "token");
+        when(cacheStore.getLatestVersion()).thenReturn(3L);
+        when(cacheStore.getLatestPageIndex(3L, 1, 10)).thenReturn(pageIndex);
+        when(cacheStore.getArticleListDtoStates(List.of(4)))
+                .thenReturn(Map.of(4, CacheValue.miss()));
+        when(cacheStore.articleListLockKey(4)).thenReturn("list-lock");
+        when(lockService.tryLock(eq("list-lock"), any(Duration.class)))
+                .thenReturn(dtoLock);
+        when(lockService.unlock(dtoLock)).thenReturn(true);
+        when(articleMapper.selectArticleListByIds(java.util.Set.of(4)))
+                .thenThrow(new IllegalStateException("mysql unavailable"));
+        when(articleMapper.selectArticleListPage(any(), any()))
+                .thenReturn(dtoPage(articleListDto(4, "完整分页兜底", 2L)));
+        when(viewStore.getViewScores(List.of(4))).thenReturn(List.of(2L));
+
+        PageResult<ArticleListDTO> result = queryService.findPage(1, 10, null);
+
+        assertThat(result.getContent()).singleElement()
+                .extracting(ArticleListDTO::getArticleTitle)
+                .isEqualTo("完整分页兜底");
+        verify(cacheStore, never()).advanceLatestVersion(anyLong());
+    }
+
+    private ArticleListDTO articleListDto(int id, String title, long viewCount) {
+        ArticleListDTO dto = new ArticleListDTO();
+        dto.setId(id);
+        dto.setArticleTitle(title);
+        dto.setViewCount(viewCount);
+        return dto;
+    }
+
+    private Page<ArticleListDTO> dtoPage(ArticleListDTO dto) {
+        Page<ArticleListDTO> page = new Page<>(1, 10);
+        page.setRecords(List.of(dto));
+        page.setTotal(1L);
+        return page;
     }
 }
